add recursion for cell refill

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app">
+      <h2>Current score: <span id="game-current-score"></span></h2>
       <div id="game-grid" class="game-grid"></div>
     </div>
     <script type="module" src="/src/main.ts"></script>
