feat: initial OO implementation

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
       <h2>Current score: <span id="game-current-score"></span></h2>
       <div id="game-grid" class="game-grid"></div>
     </div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
